chore: add tsx to npm lint script

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,6 @@
     "checkJs": true,
     "strict": true,
   },
-  "include": ["public/**/*.js"],
-  "exclude": ["node_modules", "**/dist"]
+  "include": ["public/**/*"],
+  "exclude": ["node_modules"]
 }
