--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "lint": "eslint . && npx tsc -p jsconfig.json",
-    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
+    "dev": "npx live-server public/"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
