chore: rm 2d suffix & add paths to jsconfig

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,8 +4,12 @@
     "target": "ES2022",
     "checkJs": true,
     "strict": true,
-    "baseUrl": "."
+    "baseUrl": "./",
+    "paths": {
+      "/*": ["public/*"]
+    }
   },
+
   "include": ["public/**/*"],
   "exclude": ["node_modules", "**/node_modules/*"]
 }
