--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "lint": "eslint . && npx tsc -p jsconfig.json",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
-    "dev": "npx live-server public/"
+    "dev": "npx live-server ./"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
